Handle unexpected tokens properly
Also, add null and boolean values to json grammar

--- a/spec/runtime/languages/json/errors.txt
+++ b/spec/runtime/languages/json/errors.txt
@@ -1,13 +1,20 @@
-==============================
+==========================================
 recovers from top-level errors
-==============================
+==========================================
 [}
 ---
 (ERROR)
 
-==================================
+==========================================
+recovers from unexpected tokens
+==========================================
+barf
+---
+(ERROR)
+
+==========================================
 recovers from errors inside arrays
-==================================
+==========================================
 [1,,2]
 ---
 (value (array
@@ -15,9 +22,9 @@ recovers from errors inside arrays
     (ERROR)
     (value (number))))
 
-==================================
+==========================================
 recovers from errors inside objects
-==================================
+==========================================
 { "key1": 1, 5 }
 ---
 (value (object (string) (value (number)) (ERROR)))
