Handle * quantifier in regex patterns

--- a/spec/runtime/languages/json/main.txt
+++ b/spec/runtime/languages/json/main.txt
@@ -1,3 +1,10 @@
+=============================
+parses floating point numbers
+=============================
+3.14
+---
+(value (number))
+
 ===================
 parses empty arrays
 ===================
