Store grammars' rules in vectors, not maps
This way, we can keep of the order in which the rules
were given, for resolving reduce/reduce conflicts.

--- a/spec/runtime/languages/javascript/main.txt
+++ b/spec/runtime/languages/javascript/main.txt
@@ -11,7 +11,9 @@ var x = {};
 ==========================================
 parses if statements
 ==========================================
-if (1) { var x = 2; }
+if (1) {
+    var x = 2;
+}
 ---
 (program
     (statement (if
