Add error recovery to javascript if statements

--- a/spec/runtime/languages/javascript/main.txt
+++ b/spec/runtime/languages/javascript/main.txt
@@ -18,8 +18,7 @@ if (isReady()) {
 }
 ---
 (program
-    (if_statement
-        (function_call (identifier))
+    (if_statement (function_call (identifier))
         (statement_block (statement (function_call (property_access (identifier) (identifier)) (identifier))))))
 
 ==========================================
