--- a/spec/runtime/languages/javascript/errors.txt
+++ b/spec/runtime/languages/javascript/errors.txt
@@ -8,7 +8,7 @@ if (*nonsense*) {
 moreStuff();
 ---
 (program
-    (statement (function_call (identifier)))
+    (expression_statement (function_call (identifier)))
     (if_statement (ERROR)
         (statement_block (ERROR)))
-    (statement (function_call (identifier))))
+    (expression_statement (function_call (identifier))))
