Improve trees generated by arithmetic grammar
This work should inform how to implement operator
precedence helper functions

--- a/spec/runtime/languages/arithmetic/errors.txt
+++ b/spec/runtime/languages/arithmetic/errors.txt
@@ -10,7 +10,8 @@ recovers from errors inside parenthesized expressions
 =====================================================
 x + (y * + z) * 5
 ---
-(expression
+(expression (sum
     (variable)
-    (plus)
-    (term (factor (ERROR)) (times) (number)))
+    (product
+        (grouping (ERROR))
+        (number))))
