Fix handling of tokens consisting of separator characters
The parser is no longer hard-coded to skip whitespace. Tokens
such as newlines, whose characters overlap with the separator
characters, can now be correctly recognized.

--- a/spec/runtime/languages/javascript/main.txt
+++ b/spec/runtime/languages/javascript/main.txt
@@ -1,7 +1,7 @@
 ==========================================
 parses multiple statements
 ==========================================
-var x = {};
+var x = {}
 firstFunction(x);
 secondFunction(x);
 ---
