Add rule precedence construct
Still need to add some way of expressing left and right
associativity

--- a/spec/runtime/languages/arithmetic/errors.txt
+++ b/spec/runtime/languages/arithmetic/errors.txt
@@ -12,6 +12,4 @@ x + (y * + z) * 5
 ---
 (expression (sum
     (variable)
-    (product
-        (grouping (ERROR))
-        (number))))
+    (product (group (ERROR)) (number))))
