Add some infix math operators to javascript grammar

--- a/spec/runtime/languages/javascript/operators.txt
+++ b/spec/runtime/languages/javascript/operators.txt
@@ -7,3 +7,15 @@ print(isDone() ? stuff : otherStuff);
     (function_call
         (identifier)
         (ternary (function_call (identifier)) (identifier) (identifier)))))
+
+==========================================
+parses mathematical operators
+==========================================
+a + b * c - d / e
+---
+(program (expression_statement
+    (math_op
+        (identifier)
+        (math_op
+            (math_op (identifier) (identifier))
+            (math_op (identifier) (identifier))))))
