Add error recovery in function calls to javascript gramamr

--- a/spec/runtime/languages/javascript/errors.txt
+++ b/spec/runtime/languages/javascript/errors.txt
@@ -1,4 +1,11 @@
 ==========================================
+recovers from errors in function calls
+==========================================
+stuff(|||);
+---
+(program (expression_statement (function_call (identifier) (ERROR))))
+
+==========================================
 recovers from errors in if statements
 ==========================================
 stuff();
