--- a/spec/runtime/languages/javascript/main.txt
+++ b/spec/runtime/languages/javascript/main.txt
@@ -18,14 +18,30 @@ theFunction(
     (string))))
 
 ==========================================
+parses constructor calls
+==========================================
+var x = new Node(5, new Node(3, null));
+---
+(program (var_declaration
+    (assignment (identifier)
+        (constructor_call (function_call (identifier)
+            (number)
+            (constructor_call (function_call (identifier)
+                (number)
+                (null))))))))
+
+==========================================
 parses multiple statements
 ==========================================
-var x = {}
+var x = {}, z, i = 0;
 firstFunction(x)
 secondFunction(x);
 ---
 (program
-    (var_declaration (assignment (identifier) (object)))
+    (var_declaration
+        (assignment (identifier) (object))
+        (identifier)
+        (assignment (identifier) (number)))
     (expression_statement (function_call (identifier) (identifier)))
     (expression_statement (function_call (identifier) (identifier))))
 
@@ -83,31 +99,30 @@ parses comments
 ==========================================
 // this is another comment
 stuff(); // this is a comment
+/* this is a third comment */
 ---
 (program
     (comment)
-    (expression_statement (function_call (identifier)))
+    (expression_statement (function_call (identifier))) (comment)
     (comment))
 
 ======================================
 parses real code
 =====================================
-  _.each = _.forEach = function(obj, iterator, context) {
-    if (obj == null) return obj;
-    if (obj.length === obj.length) {
-      for (var i = 0; i < length; i = i + 1) {
-        if (iterator.call(context, obj[i], i, obj) === breaker) return;
-      }
-    } else {
-      var keys = _.keys(obj);
-      for (var i = 0; i < length; i = i + 1) {
-        if (iterator.call(context, obj[keys[i]], keys[i], obj) === breaker) return;
-      }
+_.each = _.forEach = function(obj, iterator, context) {
+  if (obj == null) return obj;
+  if (obj.length === obj.length) {
+    for (var i = 0; i < length; i++) {
+      if (iterator.call(context, obj[i], i, obj) === breaker) return;
     }
-    return obj;
-  };
-
-
+  } else {
+    var keys = _.keys(obj);
+    for (var i = 0; i < length; i++) {
+      if (iterator.call(context, obj[keys[i]], keys[i], obj) === breaker) return;
+    }
+  }
+  return obj;
+};
 ---
 (program (expression_statement
     (assignment
@@ -123,7 +138,7 @@ parses real code
                             (for_statement
                                 (var_declaration (assignment (identifier) (number)))
                                 (expression_statement (bool_op (identifier) (identifier)))
-                                (assignment (identifier) (math_op (identifier) (number)))
+                                (math_op (identifier))
                                 (statement_block
                                     (if_statement
                                         (bool_op (function_call (property_access (identifier) (identifier)) (identifier) (property_access (identifier) (identifier)) (identifier) (identifier)) (identifier))
@@ -133,7 +148,7 @@ parses real code
                             (for_statement
                                 (var_declaration (assignment (identifier) (number)))
                                 (expression_statement (bool_op (identifier) (identifier)))
-                                (assignment (identifier) (math_op (identifier) (number)))
+                                (math_op (identifier))
                                 (statement_block
                                     (if_statement
                                         (bool_op (function_call
