--- a/spec/runtime/languages/golang/main.txt
+++ b/spec/runtime/languages/golang/main.txt
@@ -14,6 +14,20 @@ func z() {}
     (func_declaration (var_name) (statement_block)))
 
 ==========================================
+parses comments
+==========================================
+package trivial
+
+func main() {
+    // do stuff
+}
+---
+(program
+    (package_directive (package_name))
+    (func_declaration (var_name) (statement_block
+        (comment))))
+
+==========================================
 parses complex types
 ==========================================
 package main
